deployments/default-allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: mediaflow
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
