deployments/tt-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tt-netpol
  namespace: mediaflow
spec:
  podSelector:
    matchLabels:
      tier: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
#    - ipBlock:
#        cidr: 192.168.1.0/16
#        cidr: 10.1.0.0/16
#        except:
#        - 172.17.1.0/24
    - podSelector:
        matchLabels:
          tier: backend
          app: node-react-app
    ports:
    - protocol: TCP
      port: 27017
  egress:
  - to:
#    - ipBlock:
#        cidr: 10.1.0.0/16
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 30100
    - protocol: TCP
      port: 4100
    - protocol: TCP
      port: 30100
